# -*- eval: (cargo-minor-mode 1)

[package]
name = "element"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
attohttpc = { version = "0.17", default-features = false }
gotham = { git = "https://github.com/gotham-rs/gotham", rev = "52b3c0cd281ea0c624aeddc1ccb97057913484a8", default-features = false }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
